chore: remove CommandCenter.bak.tsx, add Playwright Airlock E2E test, align aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,11 @@
         "contexts/*"
       ],
       "@components/*": [
-        "src/components/*",
-        "components/*"
+        "components/*",
+        "src/components/*"
+      ],
+      "@components-src/*": [
+        "src/components/*"
       ],
       "@components-root/*": [
         "components/*"
