--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Node.js 20
+      - name: Set up Node.js 20.19
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x' # Use a modern, supported version
+          node-version: 20.19
 
       - name: Install
         run: npm ci --legacy-peer-deps
