--- a/package.json
+++ b/package.json
@@ -27,34 +27,33 @@
     "verify-dashboard": "node ./scripts/verify-dashboard.js"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "@google/genai": "^1.30.0",
-    "firebase": "^12.6.0",
-    "lucide-react": "^0.554.0",
-    "framer-motion": "^12.23.24",
-    "@vitejs/plugin-react": "^5.1.1",
-    "path": "^0.12.7",
-    "vite": "^7.2.4",
-
     "@sentry/browser": "^7.78.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@vitejs/plugin-react": "^5.1.1",
     "dompurify": "^3.0.5",
+    "firebase": "^12.6.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "marked": "^5.1.1",
+    "path": "^0.12.7",
     "playwright": "^1.56.1",
     "postcss": "^8.5.6",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "vite": "^7.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-
     "@percy/cli": "^1.0.0",
+    "@percy/playwright": "^1.0.10",
     "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.0.0",
     "@vitest/coverage-v8": "^4.0.9",
     "@vitest/ui": "^4.0.9",
     "autoprefixer": "^10.4.22",
@@ -71,6 +70,8 @@
     "prettier": "^3.0.0",
     "serve": "^14.1.1",
     "tailwindcss": "^4.1.17",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0",
     "vitest": "^4.0.9",
     "web-vitals": "^3.3.0"
   },
