--- a/.github/workflows/verify-style.yml
+++ b/.github/workflows/verify-style.yml
@@ -1,110 +1,35 @@
-name: Verify Naming & Style
-
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  push:
-    branches: [main]
-
-jobs:
-  verify-style:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js 20
-        uses: actions/setup-node@v5
-        with:
-          node-version: '20'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run verify-naming
-        run: npm run verify-naming
-      - name: Lint and tests
-        run: |
-          npm run lint
-          npm test
-          npm run build
-name: Verify Naming & Style
-
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  push:
-    branches: [main]
-
-jobs:
-  verify-style:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js 20
-        uses: actions/setup-node@v5
-        with:
-          node-version: '20'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run verify-naming
-        run: npm run verify-naming
-      - name: Lint and tests
-        run: |
-          npm run lint
-          npm test
-          npm run build
-name: Verify Naming & Style
-
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-
-jobs:
-  verify-style:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js 20
-        uses: actions/setup-node@v5
-        with:
-          node-version: '20'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run verify-naming
-        run: npm run verify-naming
-      - name: Lint and tests
-        run: |
-          npm run lint
-          npm test
 name: Verify Style & Quality
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   verify-style:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run Naming Convention Verification
-      run: npm run verify-naming
+      - name: Run Naming Convention Verification
+        run: npm run verify-naming
 
-    - name: Run ESLint
-      run: npm run lint
+      - name: Run ESLint
+        run: npm run lint
 
-    - name: Run Unit Tests
-      run: npm test
+      - name: Run Unit Tests
+        run: npm test
 
-    - name: Run Build Check
-      run: npm run build
+      - name: Run Build Check
+        run: npm run build
