--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "e2e:watch": "npx concurrently -k 'npm run dev' 'cross-env PLAYWRIGHT_REUSE_EXISTING_SERVER=true npm run e2e'",
     "show-latest-trace": "pwsh -NoProfile -ExecutionPolicy Bypass -File ./scripts/show-latest-trace.ps1",
     "show-latest-trace:node": "node ./scripts/show-latest-trace.js",
-    "verify-dashboard": "node ./scripts/verify-dashboard.js"
+    "verify-dashboard": "node ./scripts/verify-dashboard.js",
+    "consolidate-lint": "node ./scripts/consolidate-lint-fixes.cjs"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
